--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,13 +18,15 @@ tauri-build = { version = "1.5.5", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.8.1", features = [ "macos-private-api", "api-all"] }
-window-shadows = "0.2.2"
 mouse_position = "0.1.4"
 axum = { version = "0.8.2", features = ["tokio", "http1"] }
 tokio = { version = "1.29.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 log = "0.4.25"
 simple_logger = "5.0.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.25"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
